src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://github.com/j-gonzalezf/pope
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/pope/issues
    jkube.io/scm-tag: head
  labels:
    app: pope
    provider: jkube
    version: 0.1-SNAPSHOT
    group: es.udc.fi.dc.tfg
  name: pope
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pope
      provider: jkube
      group: es.udc.fi.dc.tfg
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://github.com/j-gonzalezf/pope
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/pope/issues
        jkube.io/scm-tag: head
      labels:
        app: pope
        provider: jkube
        version: 0.1-SNAPSHOT
        group: es.udc.fi.dc.tfg
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: github.com:5050/j-gonzalezf/pope:latest
        imagePullPolicy: Always
        name: deploy-pope
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: tfg-reg-cred
